OK Really FINISHED! - Fixed spacing on more.

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -264,6 +264,7 @@ h1 {
 	width: 42%;
 	border-radius: 2px;
 	padding:5px;
+	margin:10px;
 	border: 1px solid black;
 	box-shadow: 0px 0px 1px 0px;
 	cursor: pointer;
